# mushroom-segmentation

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: algorithm.md  usage.md
src/mushroom_segmentation/: __init__.py  __main__.py
src/mushroom_segmentation/config/: __init__.py  settings.py
src/mushroom_segmentation/core/: __init__.py  segmentation.py  visualization.py
src/mushroom_segmentation/utils/: __init__.py  io_handler.py  validators.py
